# ChangeLog for app-misc/dnetc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/ChangeLog,v 1.67 2013/12/28 04:13:26 robbat2 Exp $

*dnetc-2.9110.519 (28 Dec 2013)
*dnetc-2.9110.519b (28 Dec 2013)

  28 Dec 2013; Robin H. Johnson <robbat2@gentoo.org> +dnetc-2.9110.519.ebuild,
  +dnetc-2.9110.519b.ebuild:
  Bug #401473: bump.

  01 Jun 2012; Zac Medico <zmedico@gentoo.org> dnetc-2.9011.496-r1.ebuild,
  dnetc-2.9015.504.ebuild, dnetc-2.9103.509.ebuild, dnetc-2.9107.516.ebuild,
  dnetc-2.9108.517.ebuild, dnetc-2.9109.518.ebuild:
  inherit user for enewgroup and enewuser

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> dnetc-2.9108.517.ebuild:
  x86 stable wrt bug #399939

  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> dnetc-2.9108.517.ebuild:
  Stable for amd64, wrt bug #399939

  23 Oct 2011; Robin H. Johnson <robbat2@gentoo.org> -dnetc-2.9002.479.ebuild,
  -dnetc-2.9003.481-r1.ebuild:
  Remove older clients that are not supported by the upstream servers anymore.
  This removes ~hppa and stable alpha, ppc, sparc from this package, but needs
  to be done as the old versions are rejected by upstream now.

*dnetc-2.9107.516 (23 Oct 2011)

  23 Oct 2011; Robin H. Johnson <robbat2@gentoo.org> +dnetc-2.9107.516.ebuild,
  dnetc-2.9108.517.ebuild, dnetc-2.9109.518.ebuild:
  Refactor SRC_URI handling slightly. Add latest sparc build.

*dnetc-2.9109.518 (23 Oct 2011)
*dnetc-2.9108.517 (23 Oct 2011)

  23 Oct 2011; Robin H. Johnson <robbat2@gentoo.org> +dnetc-2.9108.517.ebuild,
  +dnetc-2.9109.518.ebuild, metadata.xml:
  Fixup for bug #382375. Version bump, confirmed to work here. Please note that
  upstream ships only some arches in each version: 2.9109.518 is missing x86,
  2.9108.517 is missing ppc.

  12 Jul 2011; Michael Sterrett <mr_bones_@gentoo.org> dnetc-2.9103.509.ebuild:
  EAPI=2; don't call use during metadata generation
