@@ -12,13 +12,13 @@ DIST dnetc518-linux-amd64.tar.gz 644073 SHA256 bc3f802079f07986b9b294834b5f97bdb
 DIST dnetc518-linux-ppc-uclibc.tar.gz 717889 SHA256 2c8eda515d7976353fd3e3e6f11ac36b87af3158d0c4e472c1b58bde82182dd9 SHA512 c0d7592b1a5c98001355e71a1d31bc67bfef6b4c5f73c8e200717424ae4ea5c62558c413753e079f4e0b6bacdb921b395f46c168673e82049dcb69a0512d11eb WHIRLPOOL 39f0b46e799c8dfff713406c1991e4e729b74932e0177ed5808c3d68a8ec56b9fdab4aa931315e3b5372e2bcc3356d38e9df74f78beb68ee7da082762a22e089
 DIST dnetc519-linux-x86-elf-uclibc.tar.gz 676925 SHA256 185790bc3a1c0eb0a00e1aadf119b531ced6f931ef47bf134d6092fc55d096f0 SHA512 87519867e8e993d7b6520d73133196d34391d0694d8d8bbc372bac4e0b21ceb1a22fcd000bd2f29841695ee7232c4584eb1b19a690f723320df023c52a581395 WHIRLPOOL 873e329bba87122c2180d44a6df1a7ee50a2f1edcd7d631a9c0c5db0aa294ba936bf1aa945171d7962cc9455a08003ca946cf307f010c8cda0b5deeda8600993
 DIST dnetc519b-linux-amd64.tar.gz 648333 SHA256 ed6535ffea6c2fb627f6957559a8b27a48f785ac1678239a456194edf5e25354 SHA512 ea7899772ee8c5fbfbe96b6ec69b1a3237fe5ae96b17bb7e11e387fb833b471f3cce8809cf3c9987dfe33c7ca7082db560c36898094ace3e547077b7a5afc324 WHIRLPOOL b3d91208a9634b837f0e369a467bcd829770d4af7c18e1b0fefbb469c45574c6f09cdb0431ee35c7d00f2e20dd95a53561a262586b9be98d687531d8ad8c105a
-EBUILD dnetc-2.9011.496-r1.ebuild 2167 SHA256 8a23793ccd25973e299d947c3d7ec14d8353076d2e4c3d20e0bc6d9c9d56d57f SHA512 6097ea6726105d379d55616523bcf01cb3d87736a7f27669dbf4bf25c3893411ccf5178c67f1f9bcd0d5a9a7614059d973e76c86711c68934d46bc4a8c72cf15 WHIRLPOOL b6acf1f5d9e8de717436dc5109adfff69c70d96c1d026a36eb9f701653f93f8236eb27aea896450d138672838b2199bcf537825a304c4485b65b2885a9a845f3
-EBUILD dnetc-2.9015.504.ebuild 2418 SHA256 6412343fd7fd931d8617e07c93ff9be797c585853b9a4d5392638697a44bc3ba SHA512 9b34932d4d629c2e50c7e49f573262f6520441bb5d5080957f7b10e324432dd784677264e12ab1ef58a7baf2afeebc17ae3f8e910b06d2e3645ed51bf0c4a9e4 WHIRLPOOL 6bcda9ff8adde71e04e071bcb297bb4d6e88d0a32ca88839ed9c99d2d7bc7ff1eaf6bfe965be9590bc56a245d64efe2210d26240b9828597090cf7df41217e1a
-EBUILD dnetc-2.9103.509.ebuild 2230 SHA256 88fef69cef993bfda22a749cf945a04745a470581c4de0a5414b49a2809e10f0 SHA512 49bea3e10594adf7f23dc7a05c56d41259919cad436d09810ccdaf905d7d7e132391aad2daf24dd79ad074ac9aa3d6ee1c038ce99ac0944ecb0eb333fcc8f570 WHIRLPOOL 80d8a42f8c5d71bed00923ed7233e940298b36b17a7c1db638f6b1a171eeeaf1167d41007fc3e523768c0df1d3f352f6e453502412e4713000767a04577ab0e8
-EBUILD dnetc-2.9107.516.ebuild 2798 SHA256 287ed3aa1a641f421e1938bcede43171c8309dfd3d6532810dbb838ebd56d5d1 SHA512 4f3a07504a2b72ac924ab22ee52dae85ba1287ec4533e53fa0cc20a92e91d24120caf333f6fe2ac90023baccc61c4dda5e42d2557eba7b30c30f23cc05670f6b WHIRLPOOL 2923c6a83786342eebb47c63fd548745a6dd1aeebb7df7705a4c43afa28544e7cd6eac2733b79bc3e29331267d02249b0661465dbf9ecddc2b4ca47de5956484
-EBUILD dnetc-2.9108.517.ebuild 2790 SHA256 f1d7bea8cf6c2a92ea0cdb011dd686f705e35f0103e2e3f5c68d098d221ba8e6 SHA512 bf0a13dce7700a6544310b1e4ed0935137c7fdb9fb1705ccb4acc8e87b4f701e860d9c274e19b97bf327a08dc4ac22b01498a12ab4cc3d0360c3917eef0f4f7a WHIRLPOOL 24684e80b61cd0f9d8e019e552974e9c62b1f80756b6bd58cb810a8f1a87f80e423ca8bdd39f6c7ee7b899232105f8f259a75e91fbae633e503585ce495a2817
-EBUILD dnetc-2.9109.518.ebuild 2792 SHA256 bc6655c3761365131ecb546e17ac1e746cdeaa927abe88551e4c264b4aae9690 SHA512 b496dcaecce66a40fef06aa57058e298cd8132d26d2369d73dd4d728bf6312b07f6ababb54dd8009ca350061187e971bccde1ef1eb556f81560805b603a6b3a8 WHIRLPOOL d0dde807232c93ca35326514580c78f34bf2dccf2ec260ebbd9a5840deec22a682f83e46eac0ef9d451743dce352eb16efb6e88feadc7bb1bd1c28060ac48911
-EBUILD dnetc-2.9110.519.ebuild 2792 SHA256 9ad7e25e1f6f332de2f45e6f8df430ae36d3a51f3712278bf044cf91e26b91d3 SHA512 8c804b9f486c9643a6f7b50541a0e3f5278af216fbfcd96a094cb0581edf42b02db75ea03410251206d56196edb358e2a1e192c1209a0e4ebf0a46339dc8c8c9 WHIRLPOOL 1dcac2f8c529a3f9e2853499d9c84813886b5dd70aa2ff80fdeb00b1bed9ed132a1abce04f640d6aee5094f3a68e144aff3a113269bb925db816bac417e86a4a
-EBUILD dnetc-2.9110.519b.ebuild 2760 SHA256 b63498b60e886a3cb3559b1d34dea3946e1026febd19b0193e52887dbdad9f34 SHA512 119f2052b1941147c8abba49bea15b20b6d48e037e5c639cb097f50db370247514477f78a5bc20d74565cf8e2acd925129856d7e2dd8d3a18b68c25d70e53bf1 WHIRLPOOL 4af3e7d07a7b498ece1e864b44538e7f37ef5aa9210d77b46ab919238e25d0b05755ec73f529ae0adf52609dcd9950e632042fff09f6d85fb9153e0fef5e7e19
-MISC ChangeLog 12635 SHA256 c26ce8232a80e1a7eadaa027145ad525940f8f7545cfc31fdc27566a81354875 SHA512 4efd360629dc55d331163bdfcf579d064349cdbef05115fd3fb1938211e4e2fa2271ee8401a832657b6a7c2c6318780615f5ae8bc2196688da8e2622299a7f82 WHIRLPOOL 4f6001fa94e107d78fd5ef4ef24b0300ceb604ce5a9b4989e788de748558b718a302d9e0ba9824476cb36de8a5e04c9ac768a52956a7398896caf0cfce296e87
+EBUILD dnetc-2.9011.496-r1.ebuild 2173 SHA256 2d6844d302dc0567b7bff88ef33fcb0e7eddcdd724ebcf32200e436b66a2542b SHA512 7915968951f961a2d3a5c5b561e982682e01e2931202340a5ea245ed273dd98a3f5452f99a488cf62972d20f8697f275914ce33b1bd4e5eba8bff752f63e6417 WHIRLPOOL ee4b82f84cc3dc8da9ca6c1e0bc1c41dd09309cdb2d4ec4464227588a9e8579eb090032f7c473ac5218787c3896546dc93079436e5311c1c6bea65d8171a1a13
+EBUILD dnetc-2.9015.504.ebuild 2424 SHA256 6c14645e2220bc827b275394d7a32989cb338a92d138bcfb70d068f76622a729 SHA512 7cc7bb29c89288f7f5778cbfd5a2f37481fd965f2d09c152e2e1af6045fe140e83e0aaeafbc8399a1c4aa47faca99899b9191cb457662aa011d19e9ef2c1daf1 WHIRLPOOL eb7274ce9f50f6d124a5f45b58b9a85174cfd2a1f1c879426338ec068d43382fec1c4433c396a70a9c21cddbcf9002bf6cfdbef69314fb287e11da53775b60cb
+EBUILD dnetc-2.9103.509.ebuild 2236 SHA256 66478b5d6e2f95a0793632ef267b6644197bddcf2c6e0b914c4a7429d632ed03 SHA512 cd61702bd2199ea992d93ede3adc81f4e5295f3eed7e0f0e3b7bbf8586d842b84058ef064e7dfeee3f61bf59a8aec4cc228952930935705eaf763c7eb9f05941 WHIRLPOOL e0c37c04bf54ed1ae4ea30b963e9301c1874ea6a4913bc867dc2c0d8684a2a55d79d2d02141ba17ae65098814c5f1c5be1559222669effba2ba39eda9caeb6f4
+EBUILD dnetc-2.9107.516.ebuild 2804 SHA256 5c3f443a19e5322a882cb027258cd4e3c7490332b98fc7914254c641610c2555 SHA512 5528eb836ec98b9eec3f09d89bc352c41d4d9a21d7d6b1e8311fbc466c35788f3f28b1f20b405368b34c65b9f3aecfcca3c59e6b77b0cd42eb28b1a54444e895 WHIRLPOOL 5b43f9b1c1d02d7dc7335a277dbcda02e857fe7d3335b025060293ba381639bcff30f8147f51817923278304cde75f6ca5edf384c34921d2b649a7229d0e002e
+EBUILD dnetc-2.9108.517.ebuild 2796 SHA256 ad9b2dd139252967d2961729db7fe9e1af4391ca7f6bc2d21820ea7f3b5e64b2 SHA512 6d9e109128389470aad1a228478ba020dd09c9390b8f2b7739cccaede828caaa9a2c4ebfed6407f22441d62eac52d12de5df47eb5385a24f859d08e858c6917a WHIRLPOOL e09fbb4beb72644a41af2cbdcb9acfc80fc3fb530cfe3123300c77151cf9ae482132910e0697c4b032e1f244d53befc99596b9eda09caea3e118cfda1509ec62
+EBUILD dnetc-2.9109.518.ebuild 2798 SHA256 7550bbdced81fc1576445767ec7c4895db2c4c3eb6f9f5d7cf4d49d92a002bb4 SHA512 240bbc0428bb8e2ab59eba891c36f3235b1ed6b41ad5b6c3ff9231cfc14fe0cc97849af2f8d0887c5b9e196b15e45459a7ad71c44356f2b2fa286697a3b22816 WHIRLPOOL 6e3371e6878ed4ea6230d3af41dd974b8376c8c88197c3cadaf4c1dd5698bd39dd842567d60115e4e1c12a1ce29c6b8d152892a2e9f1ac729f847887e1a4d731
+EBUILD dnetc-2.9110.519.ebuild 2798 SHA256 566310675b243dc414dca0eb37c614025d01da4afc7497bb61cad86733660e3b SHA512 6675c2514cd256877b61c8a14471fe04c41eac69f2003ce1c06f5f38831e76a95f565688172e3e6f3bf843ef5fcc53b4dc0c868e7751ed80c85c071050bdebac WHIRLPOOL 0da239470e836a102edf250b2f3a6fceb2382d32ba060464bbf58ea3af8ec6d8afb3d1f0688e6c3562fc55161cfbcc5898ac467ec8a39bbbc77a3df4b98aafbd
+EBUILD dnetc-2.9110.519b.ebuild 2766 SHA256 5200a2d5b8ce822814a240ad4679d1a51a117671fbb2b126ddd67fe4b10ccacb SHA512 6914b9556a52ffa65d41fc64a28a1366e5081c8f0b1732366e63f00b952b08b7458a7ef513f581ccc34b6ed2dd76fd2d0f0ee77edead95f1c91a8a580b195b8c WHIRLPOOL 99d105f531b5d4601606af14bc9a8c95d8fb1e7577bbe81ae497189343919628f71fdc146a011cf5d851b993a72f7a3805ee36d03ee2f83ad7f6ecc4c4f04a25
+MISC ChangeLog 12943 SHA256 97dd9270aacad63faff870d564aba5b3cf6be0e6faed39879f9b787b32ea9cde SHA512 53082bf39c9040f60d06cfb719d072022c9c6e55c6409cfa7ff5a6ae79fc7624cb9257cd7ab859d0842f50453f96169f01d8e60f3befec8f9e74abcc06ea31d8 WHIRLPOOL abc0b1375f60360316c7bb9d2ce049faff73e99f14b3fac26cdf5a0ca71b63334967893c925d4a4bdfd60cccf5aa56407f8846be16e8fb015d397e9ad2d14fe5
 MISC metadata.xml 343 SHA256 62e7aa539b55a81da772775d03e2a38a624936ae6e8fb2514ae173817e52ce5c SHA512 3fad2b03846152809c63401dc339ea7897924e556882d1c5c6231df17ace868414c990611a652551bc39d26adf1ea7785eeb8afa3bb609c055f843131ab92f6a WHIRLPOOL 339091589379289f1b4fc9719ea15305bd76574736fde084bd5c5bc1b7e2061da91d3413d8729113055e04eb3c5bde37a608b1fd77484a16df9854ed707cad70
