@@ -2,10 +2,10 @@ DEFINED_PHASES=install postinst postrm preinst
 DESCRIPTION=distributed.net client
 HOMEPAGE=http://www.distributed.net
 KEYWORDS=amd64 x86
-LICENSE=distributed.net
+LICENSE=distributed.net GPL-2
 RDEPEND=net-dns/bind-tools
 RESTRICT=mirror
 SLOT=0
 SRC_URI=x86? ( http://http.distributed.net/pub/dcti/v2.9011/dnetc496-linux-x86-elf-uclibc.tar.gz ) amd64? ( http://http.distributed.net/pub/dcti/v2.9011/dnetc496-linux-amd64-elf.tar.gz )
 _eclasses_=user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=396de2b1e2b24c6986379825bd6f59e5
+_md5_=079b25b6cca1fc4400bc5c8444aed763
