@@ -2,9 +2,9 @@ DEFINED_PHASES=install postinst postrm preinst setup
 DESCRIPTION=distributed.net client
 HOMEPAGE=http://www.distributed.net
 KEYWORDS=-* x86
-LICENSE=distributed.net
+LICENSE=distributed.net GPL-2
 RESTRICT=mirror
 SLOT=0
 SRC_URI=http://http.distributed.net/pub/dcti/v2.9015/dnetc504-linux-x86-elf-uclibc.tar.gz
 _eclasses_=eutils	d04e3933e3ec7e338a0561a6b0ae66b1	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=af697ae39949646a34af91d972baaf23
+_md5_=d027753e3537a3174e8c359d781dae43
