@@ -3,10 +3,10 @@ DESCRIPTION=distributed.net client
 EAPI=2
 HOMEPAGE=http://www.distributed.net
 KEYWORDS=~sparc
-LICENSE=distributed.net
+LICENSE=distributed.net GPL-2
 RDEPEND=net-dns/bind-tools
 RESTRICT=mirror
 SLOT=0
 SRC_URI=sparc? ( http://http.distributed.net/pub/dcti/v2.9107/dnetc516-linux-sparc-v7.tar.gz )
 _eclasses_=user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=b74e5367b5d7f77c21afda54baa64b2d
+_md5_=4b2ad0f224aa3eb685cd916f372f8228
