@@ -3,10 +3,10 @@ DESCRIPTION=distributed.net client
 EAPI=2
 HOMEPAGE=http://www.distributed.net
 KEYWORDS=amd64 x86
-LICENSE=distributed.net
+LICENSE=distributed.net GPL-2
 RDEPEND=net-dns/bind-tools
 RESTRICT=mirror
 SLOT=0
 SRC_URI=amd64? ( http://http.distributed.net/pub/dcti/v2.9108/dnetc517-linux-amd64.tar.gz ) x86? ( http://http.distributed.net/pub/dcti/v2.9108/dnetc517-linux-x86-elf-uclibc.tar.gz )
 _eclasses_=user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=a5fb222bf7056dd846bec4aff574b6c7
+_md5_=5139757c0f4220cebbf4c8137370091b
