@@ -3,10 +3,10 @@ DESCRIPTION=distributed.net client
 EAPI=2
 HOMEPAGE=http://www.distributed.net
 KEYWORDS=~amd64 ~ppc
-LICENSE=distributed.net
+LICENSE=distributed.net GPL-2
 RDEPEND=net-dns/bind-tools
 RESTRICT=mirror
 SLOT=0
 SRC_URI=amd64? ( http://http.distributed.net/pub/dcti/v2.9109/dnetc518-linux-amd64.tar.gz ) ppc? ( http://http.distributed.net/pub/dcti/v2.9109/dnetc518-linux-ppc-uclibc.tar.gz )
 _eclasses_=user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=49fc8c6f1a382d50cacb235d2e0d82c5
+_md5_=34a14036e96831606a431921b9c4c089
