@@ -3,10 +3,10 @@ DESCRIPTION=distributed.net client
 EAPI=2
 HOMEPAGE=http://www.distributed.net
 KEYWORDS=~x86
-LICENSE=distributed.net
+LICENSE=distributed.net GPL-2
 RDEPEND=net-dns/bind-tools
 RESTRICT=mirror
 SLOT=0
 SRC_URI=x86? ( http://http.distributed.net/pub/dcti/v2.9110/dnetc519-linux-x86-elf-uclibc.tar.gz )
 _eclasses_=user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=8b92810fd738bfcc2a0d1efb601de57b
+_md5_=bdfbd61525de02c5c11f0e1fcc6b06c9
