@@ -3,10 +3,10 @@ DESCRIPTION=distributed.net client
 EAPI=2
 HOMEPAGE=http://www.distributed.net
 KEYWORDS=~amd64
-LICENSE=distributed.net
+LICENSE=distributed.net GPL-2
 RDEPEND=net-dns/bind-tools
 RESTRICT=mirror
 SLOT=0
 SRC_URI=amd64? ( http://http.distributed.net/pub/dcti/v2.9110/dnetc519b-linux-amd64.tar.gz )
 _eclasses_=user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=1ef061aee0ee92ad673b8c697c54ca22
+_md5_=fac0bee205f4b509da676755f277bbbf
