@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/dnetc
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/ChangeLog,v 1.67 2013/12/28 04:13:26 robbat2 Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/ChangeLog,v 1.68 2014/01/02 00:06:44 robbat2 Exp $
+
+  02 Jan 2014; Robin H. Johnson <robbat2@gentoo.org> dnetc-2.9011.496-r1.ebuild,
+  dnetc-2.9015.504.ebuild, dnetc-2.9103.509.ebuild, dnetc-2.9107.516.ebuild,
+  dnetc-2.9108.517.ebuild, dnetc-2.9109.518.ebuild, dnetc-2.9110.519.ebuild,
+  dnetc-2.9110.519b.ebuild:
+  Bug #425910: include init script license.
 
 *dnetc-2.9110.519 (28 Dec 2013)
 *dnetc-2.9110.519b (28 Dec 2013)
